--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@chakra-ui/react": "^1.0.4",
     "@emotion/react": "^11.1.4",
     "@emotion/styled": "^11.0.0",
+    "@mdx-js/loader": "^1.6.22",
+    "@next/mdx": "^10.0.4",
     "framer-motion": "^3.1.1",
     "next": "10.0.3",
     "react": "17.0.1",
